[gd_scene load_steps=18 format=2]

[ext_resource path="res://content/gadgets/lift/Lift.gd" type="Script" id=1]
[ext_resource path="res://content/gadgets/lift/lift.png" type="Texture" id=2]
[ext_resource path="res://content/gadgets/lift/lift-build.png" type="Texture" id=3]
[ext_resource path="res://content/sounds/Amb/giraffe.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 11 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.0960758, 0.88498, 1 )
colors = PoolColorArray( 0.345098, 1, 0.392157, 0, 0.345098, 1, 0.392157, 0.54902, 0.345098, 1, 0.392157, 0.54902, 0.345098, 1, 0.392157, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 2
emission_box_extents = Vector3( 10, 12, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 3.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 12.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 3 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 336, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 16.0
} ]

[node name="Lift" type="Area2D" groups=["pauseL", "saveable", "softPauseL"]]
collision_layer = 0
collision_mask = 19456
space_override = 3
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 1.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -12, 32 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 24, 0 )

[node name="OverlaySprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( -12, 32 )
z_index = 1
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 24, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="CollisionShape2D"]
position = Vector2( 0, 4 )
emitting = false
amount = 10
lifetime = 6.0
visibility_rect = Rect2( -100, -100, 200, 500 )
process_material = SubResource( 4 )

[node name="build" type="AnimatedSprite" parent="."]
position = Vector2( 0, 33 )
frames = SubResource( 13 )

[node name="buildSfx" type="AudioStreamPlayer2D" parent="build"]
position = Vector2( 0, -33 )
stream = ExtResource( 4 )
volume_db = 6.684
pitch_scale = 1.48
max_distance = 200.0
bus = "Sounds"

[node name="Tween" type="Tween" parent="."]

[node name="SpawnTween" type="Tween" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Lift_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Lift_body_exited"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="tween_all_completed" from="SpawnTween" to="." method="_on_Tween_tween_all_completed"]
